# app4

./: .gitignore  README.md  app4_sitecustomize_ran.txt  launch_help.txt  py_verbose.txt  pyproject.toml  sitecustomize.py  tcpstore_help.txt  torchrun_help.txt
.cursor/plans/: ttt-linear_production_gates_v2_ebea26e0.plan.md
.github/workflows/: ci.yml
app4/: __init__.py
app4/scripts/: launch_ds.sh  launch_fsdp.sh
app4/tests/: test_chunk_causality.py  test_dual_matches_primal.py  test_fast_weight_dtype.py  test_inference_primal.py  test_state_isolation.py  test_w0_init.py
app4/ttt/: __init__.py
app4/ttt/data/: __init__.py  datasets.py  sampler.py  tokenizer.py
app4/ttt/data/assets/: tiny.txt
app4/ttt/inference/: generate.py
app4/ttt/kernels/: dual_triton.py
app4/ttt/layers/: ttt_linear.py
app4/ttt/model/: configs.py  llama_ttt.py
app4/ttt/ops/: layernorm.py  rope.py
app4/ttt/train/: deepspeed_zero3.py  fsdp.py  fsdp2.py  spawn_local.py  train.py
app4/ttt/utils/: bench_trainstep.py  bench_ttt.py  checkpointing.py  logging.py  profiling.py  rng.py  seed.py
docs/perf/: bottlenecks.md  eval_tinyshakespeare.md  fsdp_comm_sweep.md  fsdp_grad_accum_sweep.md
docs/runs/: end_of_day.md  step3_seq_len_ramp.md
scripts/: download_tinyshakespeare.sh
